# fvl

./: CONTRIBUTING.md  Cargo.toml  README.md  foundry.toml
contracts/: FvlRollup.sol  deploy.sh
docs/: FVL_PROJECT_OVERVIEW.md  FVL_REPL_Guide.md  FVL_SPEC.md
src/: block.rs  hash.rs  lib.rs  log.rs  main.rs  parser.rs  runtime.rs  sequencer.rs  state.rs  store.rs  submitter.rs  system_registry.rs  transaction.rs  types.rs  validation.rs
src/cli/: commands.rs  config.rs  mod.rs  output.rs  repl.rs
tests/fixtures/: lending_pool.yaml  simple_swap.yaml
